--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 name: André Carvalheira
 
 # Short bio or description (displayed in the header)
-bio: Ser paneleiro.
+bio: Product Manager
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-picture: assets/images/profile.png
+# picture: assets/images/profile.png
 
 # if you don't need pagination, comment the *paginate* configs below
 # paginate: 5
