--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 name: André Carvalheira
 
 # Short bio or description (displayed in the header)
-bio: Product Manager
+bio: My thoughts on life and building products
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-picture: assets/images/Andre Carvalheira.jpg
+picture: assets/images/profile.jpg
 
 # if you don't need pagination, comment the *paginate* configs below
 # paginate: 5
