--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Name of your site (displayed in the header)
-name: Andre Carvalheira
+name: André Carvalheira
 
 # Short bio or description (displayed in the header)
 bio: Product Manager
